<resources>
    <string name="app_name">SocialRunning</string>
    <string name="fb_button">FACEBOOK LOGIN</string>
    <string name="connect_button">SE CONNECTER</string>
    <string name="memo_checkbox">Mémoriser mot de passe</string>
    <string name="email_text">Adresse Mail</string>
    <string name="password_text">Mot de passe</string>
    <string name="passwordforgotten_link">Mot de passe oublié</string>


    <!-- Network -->
    <string name="no_network_dialog_message">Réseau internet indisponible</string>
    <string name="no_network_dialog_title">Pas de réseau</string>
    <string name="logo_desc">Logo</string>
    <string name="register_link">S\'inscrire</string>
    <string name="register_firstname">Prénom</string>
    <string name="register_lastname">Nom</string>
    <string name="register_email">Adresse Mail</string>
    <string name="register_password">Mot de passe</string>
    <string name="register_passwordConf">Confirmation mot de passe</string>
    <string name="register_birthday">Date de naissance</string>
    <string name="register_zone">Zone de recherche (km)</string>
    <string name="register_button">S\'inscrire</string>
    <string name="register_minValueZone">0</string>
    <string name="connection_error_dialog_message">Une erreur de connexion s\'est produite</string>
    <string name="connection_error_dialog_title">Connexion</string>
    <string name="title_activity_home">Accueil</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Accueil</string>
    <string name="drawer_item_settings">Mon compte</string>
    <string name="drawer_item_create_group">Créer un groupe</string>
    <string name="drawer_item_create_race">Créer une course</string>
    <string name="drawer_item_groups">Mes groupes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>


    <string-array name="Homefilter_array">
        <item>Tous</item>
        <item>Distance</item>
        <item>Nom</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_group">Créer un groupe</string>

    <string name="title_activity_dialogs">Séléctionner vos dates</string>

</resources>
