<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.merchez.socialrunning.socialrunning.MainActivity"
    android:focusableInTouchMode="true"
    >


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email_text"
        android:layout_above="@+id/mdp_checkbox"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="65dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp" />

    <CheckBox
        android:text="@string/memo_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mdp_checkbox"
        android:layout_alignBottom="@+id/mdpoublie_link"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />

    <TextView
        android:text="@string/passwordforgotten_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mdpoublie_link"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/button_connect"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/mdp"
        android:hint="@string/password_text"
        tools:ignore="PxUsage"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/mdp_checkbox"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/fb_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_connectfb"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />

    <ImageView  android:id="@+id/profilPicture"
        android:src="@mipmap/logo"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:text="@string/register_link"
        android:layout_height="wrap_content"
        android:id="@+id/register_link"
        android:layout_marginBottom="27dp"
        android:linksClickable="true"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_marginEnd="16dp"
        android:layout_width="140dp"
        android:layout_above="@+id/button_connectfb"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/connect_button"
        android:layout_height="wrap_content"
        android:id="@+id/button_connect"
        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_marginStart="20dp"
        android:elevation="0dp"
        android:layout_width="140dp"
        android:layout_alignBaseline="@+id/register_link"
        android:layout_alignBottom="@+id/register_link"
        android:layout_alignParentStart="true" />


</RelativeLayout>
