<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.merchez.socialrunning.socialrunning.RegistrationActivity">


    <!--<ImageView  android:id="@+id/profilPicture"
        android:background="@drawable/img"
        android:layout_centerHorizontal="true"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="ProfilPicture" />-->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:id="@+id/firstname"
        android:hint="@string/register_firstname"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lastname"
        android:hint="@string/register_lastname"
        android:layout_below="@+id/firstname"
        android:layout_alignStart="@+id/firstname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailadress"
        android:hint="@string/register_email"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/lastname"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:layout_below="@+id/emailadress"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_alignStart="@+id/emailadress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/birthday"
        android:hint="@string/register_birthday"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/passwordConf"
        android:layout_alignStart="@+id/passwordConf"
        android:layout_alignEnd="@+id/passwordConf"
        android:inputType="date" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:layout_alignStart="@+id/birthday"
        android:layout_marginTop="51dp"
        android:id="@+id/seekBar"
        android:layout_alignEnd="@+id/birthday" />

    <TextView
        android:text="@string/register_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:layout_alignStart="@+id/birthday"
        android:layout_marginTop="13dp"
        android:id="@+id/zone_textview"
        android:textSize="18sp"
        android:textColor="@android:color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:id="@+id/button_register"
        style="@android:style/Widget.Material.Button.Colored"
        android:text="@string/register_button" />

    <android.support.v7.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/view2"
        app:cardCornerRadius="45dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/cursor">
        <ImageView
            android:layout_height="90dp"
            android:layout_width="match_parent"
            android:id="@+id/profilPicture"
            android:src="@drawable/ic_profil_picture"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:elevation="7dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:cropToPadding="false">
        </ImageView>

        <ImageView  android:id="@+id/addProfilPicture"
            android:src="@drawable/ic_add_circle_white_24dp"
            android:layout_width="40dp"
            android:contentDescription="AddProfilPicture"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:elevation="24dp"
            android:layout_marginTop="50dp" />
    </android.support.v7.widget.CardView>

    <TextView
        android:text="@string/register_minValueZone"
        android:id="@+id/cursor"
        android:background="?android:attr/textSelectHandle"
        android:gravity="center"
        android:layout_height="25dp"
        android:layout_width="20dp"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/passwordConf"
        android:hint="@string/register_passwordConf"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lastname" />


</RelativeLayout>
